--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.3.50'
+    ext.gradle_version = '3.6.0-beta02'
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-rc02'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,6 +39,18 @@ ext {
     rxLocation = '1.0.5'
     mapsServices = '16.1.0'
     mapsUtils = '0.5+'
+    constraintlayout = '1.1.3'
+    material = '1.0.0'
+    
+    //androidx
+    appcompatVersion = '1.1.0'
+    core_ktxVersion = '1.1.0'
+    nav_ktx = '2.1.0'
+    lifecycle_ext = '2.1.0'
+    vector_drawable = '1.1.0'
+
+    //dagger
+    daggerVersion = '2.22'
 
     //MpBox
     mapBoxVersion = '7.1.0'
