--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     implementation "androidx.vectordrawable:vectordrawable:$vector_drawable"
     implementation "androidx.navigation:navigation-fragment:$nav_ktx"
     implementation "androidx.navigation:navigation-ui:$nav_ktx"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ext"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_ktx"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_ktx"
     testImplementation 'junit:junit:4.12'
@@ -50,6 +49,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
     annotationProcessor "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ext"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ext"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_ext"
 
     implementation project(':soundsystem')
     implementation 'com.google.dagger:dagger:2.22'
