--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,9 @@ ext {
     appcompatVersion = '1.1.0'
     core_ktxVersion = '1.1.0'
     nav_ktx = '2.1.0'
-    lifecycle_ext = '2.1.0'
+    lifecycle_ext = '2.2.0-rc01'
     vector_drawable = '1.1.0'
+    coroutines_version = '1.1.1'
 
     //dagger
     daggerVersion = '2.22'
